--- a/src/yafowil/widget/array/resources/widget.css
+++ b/src/yafowil/widget/array/resources/widget.css
@@ -1,13 +1,21 @@
-.arraywidget {
-    border-collapse:collapse;
-}
 .arraytemplate {
     display:none;
 }
-.arraywidget th {
-    width:150px;
+.array table {
+    border-collapse:collapse;
+    border-top:#ccc 1px solid;
+    border-left:#ccc 1px solid;
+    border-right:#ccc 1px solid;
+}
+.array table th {
     color:#333;
-    font-weight:normal;
+    background-color:#ccc;
+}
+.array table tr {
+    border-bottom:#ccc 1px solid;
+}
+.array table td.actions {
+    vertical-align:top;
 }
 .array_actions a {
     line-height:16px;
