--- a/src/yafowil/widget/array/resources/widget.css
+++ b/src/yafowil/widget/array/resources/widget.css
@@ -6,6 +6,7 @@
     border-top:#ccc 1px solid;
     border-left:#ccc 1px solid;
     border-right:#ccc 1px solid;
+    margin-bottom:0.5em;
 }
 .array table th {
     color:#333;
