--- a/src/yafowil/widget/array/resources/widget.css
+++ b/src/yafowil/widget/array/resources/widget.css
@@ -1,28 +1,4 @@
-/* example related */
-.array table {
-    border-collapse:collapse;
-    border-top:#ccc 1px solid;
-    border-left:#ccc 1px solid;
-    border-right:#ccc 1px solid;
-    margin-bottom:0.5em;
-}
-.array table th {
-    color:#333;
-    background-color:#ccc;
-}
-.array table tr {
-    border-bottom:#ccc 1px solid;
-}
-.array table td.actions {
-    vertical-align:top;
-}
-.errormessage {
-	color:red;
-	font-size:11px;
-	padding-bottom:2px;
-}
-
-/* general */
+/* yafowil.widget.array */
 .arraytemplate {
     display:none;
 }
