--- a/src/yafowil/widget/array/resources/bootstrap/widget.css
+++ b/src/yafowil/widget/array/resources/bootstrap/widget.css
@@ -1,6 +1,49 @@
 /* yafowil.widget.array - bootstrap theme styles */
-.arraytemplate {
-    display:none;
+.icon-plus-sign,
+.icon-minus-sign,
+.icon-circle-arrow-up,
+.icon-circle-arrow-down {
+    display:inline-block;
+    font-family:'Glyphicons Halflings';
+    font-style:normal;
+    font-weight:400;
+    line-height:1;
+    margin-left:2px;
+    position:relative;
+    top:1px;
+}
+.icon-plus-sign:before {
+    content:"";
+}
+.icon-minus-sign:before {
+    content: "";
+}
+.icon-circle-arrow-up:before {
+    content:"";
+}
+.icon-circle-arrow-down:before {
+    content: "";
+}
+.array table {
+    border-radius:4px;
+    margin-bottom:0;
+}
+.array table table {
+    border-right:#ddd 1px solid;
+    margin-top:10px;
+}
+.array table table th {
+    padding-left:0;
+}
+.array th.head_actions,
+.array td.actions {
+    width:75px;
+}
+.array td.widget {
+    padding:0 0 10px 0;
+}
+.array td.widget .form-group {
+    margin:0;
 }
 .array_actions a {
     float:right;
@@ -10,12 +53,6 @@
     opacity:0.4;
     filter:alpha(opacity=40);
 }
-.array .widget .control-group {
-    margin-bottom:0;
-}
-.array td.widget {
-    font-size:13px;
-}
-.array td.actions {
-    min-width:60px;
+.arraytemplate {
+    display:none;
 }
