--- a/src/yafowil/widget/array/resources/plone5/widget.css
+++ b/src/yafowil/widget/array/resources/plone5/widget.css
@@ -1,32 +1,54 @@
 /* yafowil.widget.array - bootstrap theme styles */
-.icon-plus-sign,
-.icon-minus-sign,
-.icon-circle-arrow-up,
-.icon-circle-arrow-down {
+.array .icon-plus-sign,
+.array .icon-minus-sign,
+.array .icon-circle-arrow-up,
+.array .icon-circle-arrow-down {
     display:inline-block;
-    font-family:'Glyphicons Halflings';
+    font-family:'yafowil-fontello';
     font-style:normal;
     font-weight:400;
-    line-height:1;
-    margin-left:2px;
+    font-variant:normal;
+    text-transform:none;
+    text-decoration:none;
+    text-align:center;
+    line-height:1em;
     position:relative;
     top:1px;
+    width:1em;
+    margin-right:2px;
+    margin-left:2px;
+    speak:none;
+    -webkit-font-smoothing:antialiased;
+    -moz-osx-font-smoothing:grayscale;
 }
-.icon-plus-sign:before {
-    content:"";
+.array .icon-plus-sign:before {
+	font-family:'yafowil-fontello';
+    content:"\e800";
 }
-.icon-minus-sign:before {
-    content: "";
+.array .icon-minus-sign:before {
+	font-family:'yafowil-fontello';
+    content:"\e801";
 }
-.icon-circle-arrow-up:before {
-    content:"";
+.array .icon-circle-arrow-up:before {
+	font-family:'yafowil-fontello';
+    content:"\e803";
 }
-.icon-circle-arrow-down:before {
-    content: "";
+.array .icon-circle-arrow-down:before {
+	font-family:'yafowil-fontello';
+    content:"\e802";
 }
 .array table {
-    border-radius:4px;
     margin-bottom:0;
+    border:none;
+    background:transparent;
+}
+.array table tr,
+.array table td {
+    border:none;
+}
+.array table th {
+    border:none;
+    border-bottom:#ddd 2px solid;
 }
 .array table table {
     border-right:#ddd 1px solid;
@@ -46,13 +68,13 @@
 }
 .array th.head_actions,
 .array td.actions {
-    width:7em;
+    width:6.5em;
 }
 .array_actions {
     display:inline-block;
     margin-top:0.6em;
     padding-right:0.45em;
-    width:7em;
+    width:6.5em;
 }
 .array_actions a {
     float:right;
