--- a/src/yafowil/widget/array/resources/bootstrap/widget.css
+++ b/src/yafowil/widget/array/resources/bootstrap/widget.css
@@ -1,67 +1,74 @@
 /* yafowil.widget.array - bootstrap theme styles */
+.arraytemplate {
+  display: none;
+}
+
 .icon-plus-sign,
 .icon-minus-sign,
 .icon-circle-arrow-up,
 .icon-circle-arrow-down {
-    display:inline-block;
-    font-family:'Glyphicons Halflings';
-    font-style:normal;
-    font-weight:400;
-    line-height:1;
-    margin-left:2px;
-    position:relative;
-    top:1px;
+  display: inline-block;
+  font-family: "Glyphicons Halflings";
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1;
+  margin-left: 2px;
+  position: relative;
+  top: 1px;
 }
+
 .icon-plus-sign:before {
-    content:"";
+  content: "\e081";
 }
+
 .icon-minus-sign:before {
-    content:"";
+  content: "\e082";
 }
+
 .icon-circle-arrow-up:before {
-    content:"";
+  content: "\e133";
 }
+
 .icon-circle-arrow-down:before {
-    content:"";
+  content: "\e134";
 }
+
 .array table {
-    border-radius:4px;
-    margin-bottom:0;
+  border-radius: 4px;
+  margin-bottom: 0;
 }
 .array table table {
-    border-right:#ddd 1px solid;
-    margin-top:10px;
+  border-right: #ddd 1px solid;
+  margin-top: 10px;
 }
 .array table table th {
-    padding-left:0;
+  padding-left: 0;
 }
-.array td.widget {
-    padding:0 0 10px 0;
+.array table td.widget {
+  padding: 0 0 10px 0;
 }
-.array td.widget .form-group {
-    margin:0;
+.array table td.widget .form-group {
+  margin: 0;
 }
-.array th {
-    vertical-align:middle;
+.array table th {
+  vertical-align: middle;
 }
-.array th.head_actions,
-.array td.actions {
-    width:5.5em;
+.array table th.head_actions,
+.array table td.actions {
+  width: 5.5em;
 }
-.array_actions {
-    display:inline-block;
-    margin-top:0.6em;
-    padding-right:0.45em;
-    width:5.5em;
+.array .array_actions {
+  display: inline-block;
+  margin-top: 0.6em;
+  padding-right: 0.45em;
+  width: 5.5em;
 }
-.array_actions a {
-    float:right;
+.array .array_actions a {
+  float: right;
 }
-.array_actions a.array_row_up_disabled,
-.array_actions a.array_row_down_disabled {
-    opacity:0.4;
-    filter:alpha(opacity=40);
+.array .array_actions a.array_row_up_disabled, .array .array_actions a.array_row_down_disabled {
+  opacity: 0.4;
+  filter: alpha(opacity=40);
 }
-.arraytemplate {
-    display:none;
-}
+
+/*# sourceMappingURL=widget.css.map */
