--- a/scss/widget_bootstrap.scss
+++ b/scss/widget_bootstrap.scss
@@ -63,11 +63,15 @@
     width:5.5em;
     a {
       float:right;
+      background: none;
       &.array_row_up_disabled,
       &.array_row_down_disabled {
         opacity:0.4;
         filter:alpha(opacity=40);
       }
+    }
+    span {
+      color: var(--yafowil-accent-color, #0d6efd);
     }
   }
 }
