--- a/scss/widget_default.scss
+++ b/scss/widget_default.scss
@@ -35,31 +35,37 @@
 	padding-bottom:2px;
 }
 
-.array_actions a {
-  line-height:16px;
-  font-size:16px;
-  padding-left:16px;
-  text-decoration:none;
-  float:right;
-  margin-top:1px;
-  border:none !important;
+.array_actions {
+  span {
+    color: var(--yafowil-accent-color, #0d6efd);
+  }
+  a {
+    line-height:16px;
+    font-size:16px;
+    padding-left:16px;
+    text-decoration:none;
+    float:right;
+    margin-top:1px;
+    border:none !important;
+    background: none;
 
-  &.array_row_add {
-    background:url('images/icon_add.png') 50% 50% no-repeat;
-  }
-  &.array_row_remove {
-    background:url('images/icon_remove.png') 50% 50% no-repeat;
-  }
-  &.array_row_up {
-    background:url('images/icon_up.png') 50% 50% no-repeat;
-  }
-  &.array_row_up_disabled {
-    background:url('images/icon_up_disabled.png') 50% 50% no-repeat !important;
-  }
-  &.array_row_down {
-    background:url('images/icon_down.png') 50% 50% no-repeat;
-  }
-  &.array_row_down_disabled {
-    background:url('images/icon_down_disabled.png') 50% 50% no-repeat !important;
+    &.array_row_add {
+      background:url('images/icon_add.png') 50% 50% no-repeat;
+    }
+    &.array_row_remove {
+      background:url('images/icon_remove.png') 50% 50% no-repeat;
+    }
+    &.array_row_up {
+      background:url('images/icon_up.png') 50% 50% no-repeat;
+    }
+    &.array_row_up_disabled {
+      background:url('images/icon_up_disabled.png') 50% 50% no-repeat !important;
+    }
+    &.array_row_down {
+      background:url('images/icon_down.png') 50% 50% no-repeat;
+    }
+    &.array_row_down_disabled {
+      background:url('images/icon_down_disabled.png') 50% 50% no-repeat !important;
+    }
   }
 }
