--- a/scss/widget_plone5.scss
+++ b/scss/widget_plone5.scss
@@ -93,18 +93,21 @@
 }
 
 .array_actions {
-    display:inline-block;
-    margin-top:0.6em;
-    padding-right:0.45em;
-    width:6.5em;
+  display:inline-block;
+  margin-top:0.6em;
+  padding-right:0.45em;
+  width:6.5em;
 
-    a {
-      float:right;
+  a {
+    float:right;
 
-      &.array_row_up_disabled,
-      &.array_row_down_disabled {
-        opacity:0.4;
-        filter:alpha(opacity=40);
-      }
+    &.array_row_up_disabled,
+    &.array_row_down_disabled {
+      opacity:0.4;
+      filter:alpha(opacity=40);
+    }
+  }
+  span {
+    color: var(--yafowil-accent-color, #0d6efd);
   }
 }
