--- a/src/yafowil/widget/array/resources/bootstrap/widget.css
+++ b/src/yafowil/widget/array/resources/bootstrap/widget.css
@@ -65,10 +65,14 @@
 }
 .array .array_actions a {
   float: right;
+  background: none;
 }
 .array .array_actions a.array_row_up_disabled, .array .array_actions a.array_row_down_disabled {
   opacity: 0.4;
   filter: alpha(opacity=40);
+}
+.array .array_actions span {
+  color: var(--yafowil-accent-color, #0d6efd);
 }
 
 /*# sourceMappingURL=widget.css.map */
