--- a/src/yafowil/widget/array/resources/default/widget.css
+++ b/src/yafowil/widget/array/resources/default/widget.css
@@ -35,6 +35,9 @@
   padding-bottom: 2px;
 }
 
+.array_actions span {
+  color: var(--yafowil-accent-color, #0d6efd);
+}
 .array_actions a {
   line-height: 16px;
   font-size: 16px;
@@ -43,6 +46,7 @@
   float: right;
   margin-top: 1px;
   border: none !important;
+  background: none;
 }
 .array_actions a.array_row_add {
   background: url("images/icon_add.png") 50% 50% no-repeat;
