--- a/src/yafowil/widget/array/resources/plone5/widget.css
+++ b/src/yafowil/widget/array/resources/plone5/widget.css
@@ -92,5 +92,8 @@
   opacity: 0.4;
   filter: alpha(opacity=40);
 }
+.array_actions span {
+  color: var(--yafowil-accent-color, #0d6efd);
+}
 
 /*# sourceMappingURL=widget.css.map */
