--- a/scss/widget_plone5.scss
+++ b/scss/widget_plone5.scss
@@ -1,4 +1,4 @@
-/* yafowil.widget.array - bootstrap theme styles */
+/* yafowil.widget.array - plone5 theme styles */
 
 .arraytemplate {
   display:none;
