some edge case fixes

--- a/scss/widget_bootstrap5.scss
+++ b/scss/widget_bootstrap5.scss
@@ -22,6 +22,11 @@
 
         th {
             vertical-align: middle;
+            background: none;
+        }
+
+        td {
+            background: none;
         }
 
         thead {
