--- a/scss/widget_bootstrap5.scss
+++ b/scss/widget_bootstrap5.scss
@@ -53,14 +53,16 @@
         display: inline-block;
         width: 5.5em;
 
-        a {
+        > a {
             float:right;
             background: none;
-                &.array_row_up_disabled,
-                &.array_row_down_disabled {
-                    opacity:0.4;
-                    filter:alpha(opacity=40);
-                }
+            margin-left: 2px;
+
+            &.array_row_up_disabled,
+            &.array_row_down_disabled {
+                opacity:0.4;
+                filter:alpha(opacity=40);
+            }
         }
         span {
             color: var(--yafowil-accent-color, #0d6efd);
