--- a/src/yafowil/widget/array/resources/default/widget.css
+++ b/src/yafowil/widget/array/resources/default/widget.css
@@ -1,68 +1,1 @@
-@charset "UTF-8";
-/* yafowil.widget.array - default theme styles */
-.arraytemplate {
-  display: none;
-}
-
-.icon-plus-sign:before,
-.icon-minus-sign:before,
-.icon-circle-arrow-up:before,
-.icon-circle-arrow-down:before {
-  content: " ";
-}
-
-.array table {
-  border-collapse: collapse;
-  border-top: #ccc 1px solid;
-  border-left: #ccc 1px solid;
-  border-right: #ccc 1px solid;
-  margin-bottom: 0.5em;
-}
-.array table th {
-  color: #333;
-  background-color: #ccc;
-}
-.array table tr {
-  border-bottom: #ccc 1px solid;
-}
-.array table td.actions {
-  vertical-align: top;
-}
-
-.errormessage {
-  color: red;
-  font-size: 11px;
-  padding-bottom: 2px;
-}
-
-.array_actions span {
-  color: var(--yafowil-accent-color, #0d6efd);
-}
-.array_actions a {
-  line-height: 16px;
-  font-size: 16px;
-  padding-left: 16px;
-  text-decoration: none;
-  float: right;
-  margin-top: 1px;
-  border: none !important;
-  background: none;
-}
-.array_actions a.array_row_add {
-  background: url("images/icon_add.png") 50% 50% no-repeat;
-}
-.array_actions a.array_row_remove {
-  background: url("images/icon_remove.png") 50% 50% no-repeat;
-}
-.array_actions a.array_row_up {
-  background: url("images/icon_up.png") 50% 50% no-repeat;
-}
-.array_actions a.array_row_up_disabled {
-  background: url("images/icon_up_disabled.png") 50% 50% no-repeat !important;
-}
-.array_actions a.array_row_down {
-  background: url("images/icon_down.png") 50% 50% no-repeat;
-}
-.array_actions a.array_row_down_disabled {
-  background: url("images/icon_down_disabled.png") 50% 50% no-repeat !important;
-}
+.arraytemplate{display:none}.icon-circle-arrow-down:before,.icon-circle-arrow-up:before,.icon-minus-sign:before,.icon-plus-sign:before{content:" "}.array table{border-collapse:collapse;border-left:1px solid #ccc;border-right:1px solid #ccc;border-top:1px solid #ccc;margin-bottom:.5em}.array table th{background-color:#ccc;color:#333}.array table tr{border-bottom:1px solid #ccc}.array table td.actions{vertical-align:top}.errormessage{color:red;font-size:11px;padding-bottom:2px}.array_actions span{color:var(--yafowil-accent-color,#0d6efd)}.array_actions a{background:none;border:none!important;float:right;font-size:16px;line-height:16px;margin-top:1px;padding-left:16px;text-decoration:none}.array_actions a.array_row_add{background:url(images/icon_add.png) 50% 50% no-repeat}.array_actions a.array_row_remove{background:url(images/icon_remove.png) 50% 50% no-repeat}.array_actions a.array_row_up{background:url(images/icon_up.png) 50% 50% no-repeat}.array_actions a.array_row_up_disabled{background:url(images/icon_up_disabled.png) 50% 50% no-repeat!important}.array_actions a.array_row_down{background:url(images/icon_down.png) 50% 50% no-repeat}.array_actions a.array_row_down_disabled{background:url(images/icon_down_disabled.png) 50% 50% no-repeat!important}
