--- a/src/yafowil/widget/array/resources/plone5/widget.css
+++ b/src/yafowil/widget/array/resources/plone5/widget.css
@@ -1,97 +1,1 @@
-/* yafowil.widget.array - plone5 theme styles */
-.arraytemplate {
-  display: none;
-}
-
-.array .icon-plus-sign,
-.array .icon-minus-sign,
-.array .icon-circle-arrow-up,
-.array .icon-circle-arrow-down {
-  display: inline-block;
-  font-family: "yafowil-fontello";
-  font-style: normal;
-  font-weight: 400;
-  font-variant: normal;
-  text-transform: none;
-  text-decoration: none;
-  text-align: center;
-  line-height: 1em;
-  position: relative;
-  top: 1px;
-  width: 1em;
-  margin-right: 2px;
-  margin-left: 2px;
-  speak: none;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.array .icon-plus-sign:before {
-  font-family: "yafowil-fontello";
-  content: "\e800";
-}
-.array .icon-minus-sign:before {
-  font-family: "yafowil-fontello";
-  content: "\e801";
-}
-.array .icon-circle-arrow-up:before {
-  font-family: "yafowil-fontello";
-  content: "\e803";
-}
-.array .icon-circle-arrow-down:before {
-  font-family: "yafowil-fontello";
-  content: "\e802";
-}
-.array .field {
-  padding-top: 0.5em;
-  margin-bottom: 0;
-}
-.array td.widget {
-  padding: 0;
-}
-.array td.widget .form-group {
-  margin: 0;
-}
-.array th {
-  vertical-align: middle;
-}
-.array th.head_actions,
-.array td.actions {
-  width: 6.5em;
-}
-.array table {
-  margin-bottom: 0;
-  border: none;
-  background: transparent;
-}
-.array table tr, .array table td {
-  border: none;
-}
-.array table th {
-  border: none;
-  border-bottom: #ddd 2px solid;
-}
-.array table table {
-  border-right: #ddd 1px solid;
-  margin-top: 10px;
-}
-.array table table th {
-  padding-left: 0;
-}
-
-.array_actions {
-  display: inline-block;
-  margin-top: 0.6em;
-  padding-right: 0.45em;
-  width: 6.5em;
-}
-.array_actions a {
-  float: right;
-}
-.array_actions a.array_row_up_disabled, .array_actions a.array_row_down_disabled {
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-}
-.array_actions span {
-  color: var(--yafowil-accent-color, #0d6efd);
-}
+.arraytemplate{display:none}.array .icon-circle-arrow-down,.array .icon-circle-arrow-up,.array .icon-minus-sign,.array .icon-plus-sign{speak:none;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;display:inline-block;font-family:yafowil-fontello;font-style:normal;font-variant:normal;font-weight:400;line-height:1em;margin-left:2px;margin-right:2px;position:relative;text-align:center;text-decoration:none;text-transform:none;top:1px;width:1em}.array .icon-plus-sign:before{content:"";font-family:yafowil-fontello}.array .icon-minus-sign:before{content:"";font-family:yafowil-fontello}.array .icon-circle-arrow-up:before{content:"";font-family:yafowil-fontello}.array .icon-circle-arrow-down:before{content:"";font-family:yafowil-fontello}.array .field{margin-bottom:0;padding-top:.5em}.array td.widget{padding:0}.array td.widget .form-group{margin:0}.array th{vertical-align:middle}.array td.actions,.array th.head_actions{width:6.5em}.array table{background:transparent;border:none;margin-bottom:0}.array table td,.array table tr{border:none}.array table th{border:none;border-bottom:2px solid #ddd}.array table table{border-right:1px solid #ddd;margin-top:10px}.array table table th{padding-left:0}.array_actions{display:inline-block;margin-top:.6em;padding-right:.45em;width:6.5em}.array_actions a{float:right}.array_actions a.array_row_down_disabled,.array_actions a.array_row_up_disabled{filter:alpha(opacity=40);opacity:.4}.array_actions span{color:var(--yafowil-accent-color,#0d6efd)}
