fix github actions. fix py tests. update scss structure.

--- a/src/yafowil/widget/array/resources/bootstrap5/widget.css
+++ b/src/yafowil/widget/array/resources/bootstrap5/widget.css
@@ -1,64 +1,1 @@
-/* yafowil.widget.array - bootstrap theme styles */
-.arraytemplate {
-  display: none;
-}
-
-.array table {
-  margin-bottom: 0;
-}
-.array table td.widget {
-  padding: 6px 0px 10px 10px;
-}
-.array table td.widget .form-group {
-  margin: 0;
-}
-.array table tr:last-of-type > td {
-  border: 0;
-}
-.array table th {
-  vertical-align: middle;
-  background: none;
-}
-.array table td {
-  background: none;
-}
-.array table thead {
-  height: 30px;
-  background-color: rgba(0, 128, 255, 0.1019607843);
-}
-.array table thead tr th {
-  padding-left: 10px;
-  border: 0;
-}
-.array table th.head_actions,
-.array table td.actions {
-  width: 5.5em;
-}
-.array table .field ~ .field {
-  margin-top: 10px;
-}
-.array .array_actions {
-  display: inline-block;
-  width: 5.5em;
-}
-.array .array_actions > a {
-  float: right;
-  background: none;
-  margin-left: 2px;
-}
-.array .array_actions > a.array_row_up_disabled, .array .array_actions > a.array_row_down_disabled {
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-}
-.array .array_actions span {
-  color: var(--yafowil-accent-color, #0d6efd);
-}
-
-@keyframes boxShadowAnimation {
-  30% {
-    background: rgba(0, 128, 255, 0.1019607843);
-  }
-}
-.row-moved {
-  animation: boxShadowAnimation 1000ms;
-}
+.arraytemplate{display:none}.array table{margin-bottom:0}.array table td.widget{padding:6px 0 10px 10px}.array table td.widget .form-group{margin:0}.array table tr:last-of-type>td{border:0}.array table th{background:none;vertical-align:middle}.array table td{background:none}.array table thead{background-color:rgba(0,128,255,.102);height:30px}.array table thead tr th{border:0;padding-left:10px}.array table td.actions,.array table th.head_actions{width:5.5em}.array table .field~.field{margin-top:10px}.array .array_actions{display:inline-block;width:5.5em}.array .array_actions>a{background:none;float:right;margin-left:2px}.array .array_actions>a.array_row_down_disabled,.array .array_actions>a.array_row_up_disabled{filter:alpha(opacity=40);opacity:.4}.array .array_actions span{color:var(--yafowil-accent-color,#0d6efd)}@keyframes boxShadowAnimation{30%{background:rgba(0,128,255,.102)}}.row-moved{animation:boxShadowAnimation 1s}
