add bs5 form validation styles and properties

--- a/scss/bootstrap5/widget.scss
+++ b/scss/bootstrap5/widget.scss
@@ -5,6 +5,12 @@
 }
 
 .array {
+    &.is-valid {
+        border-color: var(--bs-form-valid-border-color);
+    }
+    &.is-invalid {
+        border-color: var(--bs-form-invalid-border-color);
+    }
     table {
         margin-bottom: 0;
 
